fixed alignment

--- a/project_1/project 1.css
+++ b/project_1/project 1.css
@@ -23,7 +23,7 @@ p {
 
 p1 {
 	 font-family: 'Atkinson Hyperlegible', sans-serif;
-	 font-size: 20px; text-align: right
+	 font-size: 20px; 
 
 }
 
